k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: node-react-rbac
  labels:
    name: node-react-rbac
