k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: node-react-rbac
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: nodereactrback8s.com  # Add this in hosts at the end(`C:\Windows\System32\drivers\etc\hosts` --> 127.0.0.1 www.nodereactrback8s.com)
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 80
